# structa

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bump-version.sh  pyproject.toml  run.sh  run_tests.sh  setup.py
docs/: destinations.md
examples/: apache_logs.yaml  minecraft_logs.yaml  minecraft_usage_example.py  multi_pattern_example.yaml  syslog.yaml  usage_cli_example.py
structa/: __init__.py  cli.py  parser.py  structure.py  utils.py
structa-helm-chart/: .helmignore  Chart.yaml  README.md  cleanup.sh  deploy.sh  values-custom.yaml  values.yaml
structa-helm-chart/templates/: NOTES.txt  configmap.yaml  deployment.yaml  service.yaml
structa/destinations/: __init__.py  bigquery.py  filesystem.py  gcs.py
structa/k8/: __init__.py  pod_streamer.py
structa/patterns/: __init__.py  grok_parser.py  regex_parser.py  template_parser.py
structa/tests/: README.md  conftest.py
structa/tests/integration/: test_parser_integration.py
structa/tests/unit/: test_parser.py
structa/utils/: __init__.py  banner.py  logging.py
utils/: local_dockerhub_build.sh  meta.yaml
