[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "structa"
version = "0.1.0"
description = "A library for chopping logs."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Author", email = "author@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.1.8",
    "kubernetes>=32.0.1",
    "pyaml>=25.1.0",
    "pytest>=8.3.5",
    "regex>=2024.11.6",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.5",
    "pre-commit>=3.5.0",
    "pytest>=7.4.3",
]

[project.scripts]
structa = "structa.cli:main"

[tool.ruff]
target-version = "py38"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.isort]
known-first-party = ["structa"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py" 
